Added Google Analytics
- Changed minimap on mobile vertical centered
- Changed scrolling to only show after loaded

--- a/website/index.html
+++ b/website/index.html
@@ -13,6 +13,16 @@
     <link rel="stylesheet" href="https://use.typekit.net/ofr7ilu.css">
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7SYNMQJJCK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7SYNMQJJCK');
+</script>
+
 <body>
     <div id="loading-screen">Loading content...</div>
     <div class="white-box" id="1.0">
